<resources>
    <string name="app_name">eventsdl</string>

    <string name="title_schedule" translation_description="The title for the schedule screen where user can see their schedule for Google I/O.">Schedule</string>
    <string name="title_home" translation_description="The title for the Home screen where user can all the updates from Google I/O team.">Home</string>
    <string name="title_map" translation_description="The title for the map screen where user can see the map of the venue.">Map</string>
    <string name="title_explore_io" translation_description="The title for the Augmented reality exploration screen where the user can explore the I/O venue in AR.">Explore I/O</string>
    <string name="title_info" translation_description="The title for the info screen where user can see various information, such as FAQ and travel info.">Info</string>

    <string name="agenda" translation_description="The title for the agenda screen where user can see all the sessions they plan to attend.">Agenda</string>
    <string name="event_codelabs_title" translation_description="Header label for general information on &quot;codelabs&quot;.">Codelabs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Info pages - Strings ready to translate-->
    <string name="settings_time_zone_label" translate_description="Set time zone in app to PST.">Events in Pacific Time Zone (UTC-8)</string>
    <string name="settings_enable_notifications" translate_description="Turn on notifications.">Enable notifications</string>
    <string name="settings_send_anonymous_usage_statistics" translation_description="Enable sending usage statistics.">Send anonymous usage statistics</string>
    <string name="settings_tos" translation_description="Open link to terms of service.">Terms of service</string>
    <string name="settings_privacy_policy" translation_description="Open link to privacy policy.">Privacy policy</string>
    <string name="settings_oss_licenses" translation_description="Open link to open source licenses.">Open sources licenses</string>
    <string name="settings_theme_title" translation_description="Choose the app theme">Choose theme</string>
    <string name="settings_theme_system" translation_description="Theme option to use the system default">System default</string>
    <string name="settings_theme_light" translation_description="Theme option to use the light theme">Light</string>
    <string name="settings_theme_dark" translation_description="Theme option to use the dark theme">Dark</string>
    <string name="settings_theme_battery" translation_description="Theme option to use which is set by the device Battery Saver feature being enabled">Set by Battery Saver</string>

    <string name="tos_url" translatable="false">https://policies.google.com/terms</string>
    <string name="privacy_policy_url" translatable="false">https://policies.google.com/privacy</string>


    <string name="built_with_material_components" translation_description="The app was built with Material Components.">Built with Material Components.</string>

    <string name="wifi_network_and_password" translation_description="Label for wifi network name and password, separated by a line break.">Network: %1$s\nPassword: %2$s</string>
    <string name="join_network" translation_description="Text for a button to automatically connect to the Wifi network.">Join network</string>

    <string name="assistant_app_description" translation_description="Text explaining the I/O 19 app for Google Assistant. [CHAR_LIMIT=100]">Use the I/O 19 Action on Google Assistant.</string>
    <string name="assistant_app_description2" translation_description="Text explaining the I/O 19 app for Google Assistant. [CHAR_LIMIT=100]">Just say \"Hey Google, talk to Google I/O 19\"!</string>


    <!-- Sign in / Sign out -->
    <string name="welcome" translation_description="Text shown instead of the user's name when the user is not signed in.">Welcome!</string>
    <string name="a11y_signed_in_content_description" translation_description="Description of the account header when the user is signed in.">Signed in as %s.</string>
    <string name="a11y_signed_out_content_description" translation_description="Description of the account header when the user is not signed in.">Tap to sign in.</string>

    <string name="dialog_sign_in_content" translation_description="The content of the dialog. When the user needs to sign in.">Sign in to save events, reserve seats and rate sessions (if an attendee). Actions will be synced from your account across app and site.</string>
    <string name="sign_in" translation_description="The description of a button to sign in.">Sign in</string>
    <string name="firebase_auth_no_network_connection" translation_description="Snackbar message when there is no network connectivity.">No internet connection</string>
    <string name="firebase_auth_unknown_error" translation_description="Snackbar message when Firebase Auth has an unknown error.">Unknown error</string>

    <string name="dialog_sign_out_content" translation_description="The content of the dialog. Used to confirm that the user wants to sign out.">All saved events, seat reservations and session ratings (if an attendee) remain synced to your account.</string>
    <string name="sign_out" translation_description="The description of a button to sign out.">Sign out</string>

    <string name="manage_google_account" translation_description="Text for a button allowing the user to manage their Google account.">Manage your Google account</string>
    <string name="manage_google_account_url" translatable="false">https://myaccount.google.com/</string>

    <!-- Onboarding -->
    <string name="onboarding_get_started" translation_description="The label for the button to start using the app.">Get started</string>
    <string name="onboarding_welcome_to_google_i_o" translation_description="The welcome message shown at the onboarding screen of the app.">Welcome to Google I/O</string>
    <string name="onboarding_date_location" translation_description="The date and the place of Google I/O 2019. [CHAR_LIMIT=80]">May 7–9, 2019\nMountain View, CA</string>
    <string name="onboarding_label_days" translation_description="The label for the display of the number of days until the conference starts">D</string>
    <string name="onboarding_label_hours" translation_description="The label for the display of the number of hours until the conference starts">H</string>
    <string name="onboarding_label_mins" translation_description="The label for the display of the number of minutes until the conference starts">M</string>
    <string name="onboarding_label_seconds" translation_description="The label for the display of the number of seconds until the conference starts">S</string>
    <string name="onboarding_welcome_google_io_pre" translation_description="The welcome message shown before the conference to tell that Google I/O is coming">Google I/O is coming</string>
    <string name="onboarding_welcome_google_io_during" translation_description="The welcome message shown during the conference">Google I/O</string>
    <string name="onboarding_welcome_google_io_post" translation_description="The welcome message shown post the conference">Watch the I/O \'19 recap and check out #io19 on social</string>
    <string name="onboarding_signin" translation_description="The welcome message to encourage the user to sign-in to have better experience">Sign-in to receive I/O notifications and attendees can reserve seats for sessions.</string>

</resources>
