<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/nav_first_group"
        android:checkableBehavior="single">

        <item
            android:id="@id/navigation_feed"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/title_home"
            app:contentDescription="@string/title_home" />

        <item
            android:id="@id/navigation_schedule"
            android:icon="@drawable/ic_nav_schedule"
            android:title="@string/title_schedule"
            app:contentDescription="@string/title_schedule" />

        <item
            android:id="@id/navigation_agenda"
            android:icon="@drawable/ic_nav_agenda"
            android:title="@string/agenda"
            app:contentDescription="@string/agenda" />

        <item
            android:id="@id/navigation_codelabs"
            android:icon="@drawable/ic_nav_codelabs"
            android:title="@string/event_codelabs_title"
            app:contentDescription="@string/event_codelabs_title" />

        <item
            android:id="@id/navigation_map"
            android:icon="@drawable/ic_nav_map"
            android:title="@string/title_map"
            app:contentDescription="@string/title_map" />

        <item
            android:id="@id/navigation_explore_ar"
            android:icon="@drawable/ic_nav_signpost"
            android:title="@string/title_explore_io"
            app:contentDescription="@string/title_explore_io" />
    </group>

</menu>